# anc

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.txt  testing.sh
.cargo/: config.toml
src/: cards.rs  lib.rs  main.rs  parsing.rs  pb.rs  sync.rs
test_files/: bad_frontmatter.qz
test_files/good/: basic.qz  cloze.qz
test_files/good/.anc/: config
test_files/good/.anc/hooks/: pre-parse
test_files/one_bad/: one_bad.qz
tests/: import.rs
