[package]
name = "anc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"]}
serde_yaml = "*"
serde_json = "*"
toml = "*"
itertools = "*"
rusqlite = "*"
sha1 = "*"
uuid = { version = "*", features = ["v4"]}
anki = { path = "anki/rslib" }
html-escape = "*"
prost = "*"
clap = { version = "*", features = ["derive"]}
tfio = "*"
serde-pickle = "*"
tokio = "*"

[dev-dependencies]
macro_rules_attribute = "*"

[build-dependencies]
prost-build = "*"
